--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="contentdiv">
         <div id="startdiv">
             <button onclick="begin()">开始游戏</button>
-            <a href="https://github.com/Enaium/cxk-ball-hitplane">点击访问该游戏源码</a>
+<!--             <a href="https://github.com/Enaium/cxk-ball-hitplane">点击访问该游戏源码</a> -->
         </div>
         <div id="maindiv">
             <div id="scorediv">
