--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>蔡徐坤打飞机By子云</title>
     <link rel="stylesheet" href="css/main.css">
+    <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+    <script>LA.init({id:"3H9yu7R237xZgitF",ck:"3H9yu7R237xZgitF",autoTrack:true,hashMode:true})</script>
 </head>
 <body>
     <div id="contentdiv">
