--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>蔡徐坤打飞机By子云</title>
+    <title>蔡徐坤雷电By子云</title>
     <link rel="stylesheet" href="css/main.css">
     <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
     <script>LA.init({id:"3H9yu7R237xZgitF",ck:"3H9yu7R237xZgitF",autoTrack:true,hashMode:true})</script>
